--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "windsurf-project",
   "version": "1.0.0",
   "description": "Basic Node.js application",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -23,17 +24,20 @@
     "@types/react-dom": "^18.2.23",
     "@types/react-syntax-highlighter": "^15.5.11",
     "cors": "^2.8.5",
+    "d3-dsv": "^2.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "langchain": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.7.1",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.2.1",
     "concurrently": "^9.2.0",
     "ts-node": "^10.9.2",
